fix: misplaced scrollbar in laptop screens, some outdated messages and small layout fixtures

--- a/src/app.css
+++ b/src/app.css
@@ -62,10 +62,10 @@ h2 {
 	--uno-apply: bg-text-accent-1 text-background;
 }
 
-body {
-	--uno-apply: overflow-y-auto relative;
+#app {
+	--at-apply: flex flex-col sm:flex-row relative lg:(container mx-auto);
 }
 
-#app {
-	--uno-apply: flex flex-col max-h-screen lg:(container mx-auto) sm:(flex-row);
+html {
+	--at-apply: overflow-y-auto;
 }
